--- a/index.html
+++ b/index.html
@@ -10,5 +10,14 @@
 <li><a href="https://cdn.destructoid.com//ul/317824-zelda%20memes.jpg">The Legend of Zelda (Unity Remaster)</a></li>
 </ul>
 
+<p>A remake of the first dungeon in The Legend of Zelda NES game. Features all rooms, enemies, 
+    and core mechanics. A custom level featuring "Simon Says" puzzle mechanics can be accessed by pressing "4". </p>
+<p><b>Contributions: </b>Implemented all player weapons (including sword, bow, boomerang, 
+    and bombs) and enemy item drops and collectables. Programmed player and enemy health and damage scripts, including knockback. 
+    Developed custom level with unique puzzle mechanics. Designed and implemented UI elements including health display, 
+    item inventory, and alternate weapon display. Also implemented animated doors, sound effects, pushable blocks and old man room.
+</p>
+
+<p>Technologies: C#, Unity</p>
 <!-- TIP: Rename this file "index.html", and it will become the default landing page whenever someone navigates their browser to your domain. -->
 </html>
