--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
     item inventory, and alternate weapon display. Also implemented animated doors, sound effects, pushable blocks and old man room.
 </p>
 
-<p>Technologies: C#, Unity</p>
+<p><b>Technologies: </b>C#, Unity</p>
 <!-- TIP: Rename this file "index.html", and it will become the default landing page whenever someone navigates their browser to your domain. -->
 </html>
