--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <!-- TODO: Erase one of these two. Replace the 'href' link below with a link to your WebGL build page. -->
 <ul>
-<li><a href="https://cdn.destructoid.com//ul/317824-zelda%20memes.jpg">The Legend of Zelda (Unity Remaster)</a></li>
+<li><a href="https://helenlia.itch.io/the-legend-of-zelda-nes-remake">The Legend of Zelda (Unity Remaster)</a></li>
 </ul>
 
 <p>A remake of the first dungeon in The Legend of Zelda NES game. Features all rooms, enemies, 
