--- a/index.html
+++ b/index.html
@@ -19,5 +19,19 @@
 </p>
 
 <p><b>Technologies: </b>C#, Unity</p>
+
+<ul>
+<li><a href="https://helenlia.itch.io/the-legend-of-zelda-nes-remake">Hueflip</a></li>
+</ul>
+
+<p>Player traverses through the map and solves puzzles by toggling between a red map and blue map.</p>
+<p><b>Contributions: </b> This was a solo project, so I implemented all game mechanics, 
+    including player movement, color toggling, and puzzle elements such as color-switching platforms, toggled platforms, and pushable blocks. 
+    Background assets were created by <li><a href="https://trixelized.itch.io/desert-ruins">Trixie</a></li>, sound effects are from
+    <li><a href="https://coffeevalenbat.itch.io/sweet-sounds-sfx-pack">CoffeeValenBat</a></li>, and music is from <li><a href="https://brackeysgames.itch.io/brackeys-platformer-bundle">Brackeys</a></li>.
+    All other sprites were created by me.
+</p>
+
+<p><b>Technologies: </b>C#, Unity, Piskel</p>
 <!-- TIP: Rename this file "index.html", and it will become the default landing page whenever someone navigates their browser to your domain. -->
 </html>
