--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 <p>Player traverses through the map and solves puzzles by toggling between a red map and blue map.</p>
 <p><b>Contributions: </b> This was a solo project, so I implemented all game mechanics, 
     including player movement, color toggling, and puzzle elements such as color-switching platforms, toggled platforms, and pushable blocks. 
-    Background assets were created by <li><a href="https://trixelized.itch.io/desert-ruins">Trixie</a></li>, sound effects are from
-    <li><a href="https://coffeevalenbat.itch.io/sweet-sounds-sfx-pack">CoffeeValenBat</a></li>, and music is from <li><a href="https://brackeysgames.itch.io/brackeys-platformer-bundle">Brackeys</a></li>.
+    Background assets were created by <a href="https://trixelized.itch.io/desert-ruins">Trixie</a>, sound effects are from
+    <a href="https://coffeevalenbat.itch.io/sweet-sounds-sfx-pack">CoffeeValenBat</a>, and music is from <a href="https://brackeysgames.itch.io/brackeys-platformer-bundle">Brackeys</a>.
     All other sprites were created by me.
 </p>
 
