--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <p><b>Technologies: </b>C#, Unity</p>
 
 <ul>
-<li><a href="https://helenlia.itch.io/the-legend-of-zelda-nes-remake">Hueflip</a></li>
+<li><a href="https://helenlia.itch.io/hueflip">Hueflip</a></li>
 </ul>
 
 <p>Player traverses through the map and solves puzzles by toggling between a red map and blue map.</p>
