updated portfolio for p3

--- a/index.html
+++ b/index.html
@@ -33,5 +33,23 @@
 </p>
 
 <p><b>Technologies: </b>C#, Unity, Piskel</p>
+
+<ul>
+<li><a href="https://himaritamura.itch.io/paracriminal">Paracriminal</a></li>
+</ul>
+
+<p>Heisting with a paranormal twist! Harness the power of ghosts to steal coins and outsmart guards in this fast-paced, single-player action game.</p>
+<p><b>Contributions: </b>
+    <li>Ghost mechanics, abilities and visuals (shrinking, phasing through walls, heat vision, and shrinking)</li>
+    <li>Designed player UI</li>
+    <li>Level design for levels 1, 2, and 3 (including guidance)</li>
+    <li>Ghost game meter</li>
+    <li>Ranking screen UI</li>
+    <li>Balanced ranking system</li>
+    <li>Caught by enemy camera movement</li>
+    <li>General debugging across all levels and mechanics</li>
+</p>
+
+<p><b>Technologies: </b>C#, Unity, Blender</p>
 <!-- TIP: Rename this file "index.html", and it will become the default landing page whenever someone navigates their browser to your domain. -->
 </html>
