--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <p>Heisting with a paranormal twist! Harness the power of ghosts to steal coins and outsmart guards in this fast-paced, single-player action game.</p>
 <p><b>Contributions: </b>
-    <li>Ghost mechanics, abilities and visuals (shrinking, phasing through walls, heat vision, and shrinking)</li>
+    <li>Ghost mechanics, abilities and visuals (shrinking, phasing through walls, heat vision, and shaking objects)</li>
     <li>Designed player UI</li>
     <li>Level design for levels 1, 2, and 3 (including guidance)</li>
     <li>Ghost game meter</li>
